--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,6 +10,8 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>This site was created by Ben Wattelman. It uses data from mapbox.com and weatherstack.com.</p>
+        <br/>
         <img src="../../img/1.jpeg" class="portrait"/>
     </div>
     {{>footer}}
